--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,31 @@ ul {
 a {
   text-decoration: none;
 }
+
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+  border: 1px solid red;
+}
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+img {
+display: block;
+max-width: 100%; 
+height: auto;
+
+}
+
+h1,h2,h3,h4,h5,h6,p,ul {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
 .features-text,
 .team-list-text,
 .portfolio-list-text {
@@ -35,6 +60,7 @@ a {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
+  margin-bottom: 8px;
 }
 .logo {
   color: #4D5AE5;
@@ -47,6 +73,12 @@ a {
 }
 .logo-style {
   color: #2e2f42;
+}
+
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #E7E9FC;
 }
 .header-nav-item {
   color: #2E2F42;
@@ -71,6 +103,7 @@ a {
 }
 .main-banner {
   background: #2E2F42;
+  text-align: center;
 }
 .main-banner-header {
   color: #FFF;
@@ -79,6 +112,9 @@ a {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  margin-bottom: 48px;
+  max-width: 496px;
+  padding: 188px 472px 0 472px;
 }
 .main-banner-btn {
   color: #FFF;
@@ -87,6 +123,8 @@ a {
   line-height: 1.5;
   letter-spacing: 0.64px;
   background-color: #4D5AE5;
+  text-align: center;
+  padding: 16px 32px;
 }
 .main-banner-btn:hover ,
 .main-banner-btn:focus {
