--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,25 @@ a {
   text-decoration: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .container {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
   border: 1px solid red;
+  display: flex;
 }
 .section {
   padding-top: 120px;
@@ -40,6 +54,7 @@ box-sizing: border-box;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  text-align: center;
 }
 .features-title,
 .team-title,
@@ -51,6 +66,7 @@ box-sizing: border-box;
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .features-header,
 .team-list-header,
@@ -61,6 +77,7 @@ box-sizing: border-box;
   line-height: 1.2;
   letter-spacing: 0.4px;
   margin-bottom: 8px;
+  text-align: center;
 }
 .logo {
   color: #4D5AE5;
@@ -70,6 +87,7 @@ box-sizing: border-box;
   line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 .logo-style {
   color: #2e2f42;
@@ -80,6 +98,17 @@ box-sizing: border-box;
   padding-bottom: 24px;
   border-bottom: 1px solid #E7E9FC;
 }
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-list,
+.address-list {
+display: flex;
+margin
+}
+
 .header-nav-item {
   color: #2E2F42;
   font-size: 16px;
@@ -90,6 +119,11 @@ box-sizing: border-box;
 .address {
   font-style: normal;
 }
+.address-list-item,
+.header-nav-item {
+  margin-right: 40px;
+}
+
 .address-list-item {
   color: #434455;
   line-height: 1.5;
@@ -101,9 +135,12 @@ box-sizing: border-box;
 .header-nav-item:hover {
   color: #404bbf;
 }
+
 .main-banner {
   background: #2E2F42;
   text-align: center;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .main-banner-header {
   color: #FFF;
@@ -123,20 +160,48 @@ box-sizing: border-box;
   line-height: 1.5;
   letter-spacing: 0.64px;
   background-color: #4D5AE5;
-  text-align: center;
-  padding: 16px 32px;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .main-banner-btn:hover ,
 .main-banner-btn:focus {
   background-color: #404BBF;
   cursor: pointer;
 }
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 .team {
   background-color: #F4F4FD;
 }
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-list-item {
   background-color: #FFFFFF;
+  flex-basis: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
+
+.worker-info {
+  padding: 32px 0;
+}
+/* .team-list-header {
+  text-align: center;
+  margin-bottom: 8px;
+} */
+
 .footer {
   background-color: #2E2F42;
 }
