--- a/css/styles.css
+++ b/css/styles.css
@@ -201,9 +201,24 @@ margin
   text-align: center;
   margin-bottom: 8px;
 } */
+.portfolio-list {
+display: flex;
+flex-wrap: wrap;
+column-gap: 24px;
+row-gap: 48px;
+}
 
+.app-info {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
 .footer {
   background-color: #2E2F42;
+  padding: 100px 0;
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -213,6 +228,8 @@ margin
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 
 }
 .footer-logo-style {
@@ -222,4 +239,5 @@ color: #f4f4fd;
   color: #F4F4FD;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  max-width: 264px
 }
