--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ a {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .section {
   padding-top: 120px;
